# Uranus-IDE

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.txt  Readme.md  pyproject.toml  requirements.txt  run_uranus.py  setup.cfg  todo.md  uranus.py  wiki.md
ProjectAttachments/: autocompelet_json.py
docs/: index.md  ipynb json.txt
sandbox/: TypeHints.py
src/: CodeProcessor_prototype.py  setting.json
src/Uranus/: AboutWindow.py  Analyzer.py  AstDetection.py  AutoComplete.py  Cell.py  CodeEditor.py  CodeHighlight.py  CodeHighlith.py  DataOutputEditor.py  DocumentEditor.py  ImageOutput.py  IpythonWindow.py  MainWindow.py  MarkdownEditor.py  ObjectInspectorWindow.py  OutputEditor.py  PyCodeEditor.py  PythonTemplate.py  RelationChartView.py  Rtl_MarkDown.py  SettingWindow.py  WorkWindow.py  WorkWindowPython.py  __init__.py  __main__.py  auto_complete_system.py  backup_temp.sav  core.py  temp.chk  untitled.py  utils.py
tests/: test_Jupyter.ipynb  test_LED_erroe_testing.ipynb  test_RelationChartView.py  test_datatype_detection_by_object_viewer_table.ipynb
