[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Uranus-IDE"
version = "3.3.1a36"
description = "A lightweight, extensible Python IDE inspired by Jupyter, built with PyQt5."
authors = [
    { name = "Atila Ghashghaie | آتیلا قشقایی", email = "atila.gh@gmail.com" }
]

license = "LicenseRef-Atila"
license-files = ["LICENSE"]

readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15",
    "IPython>=8.0",
    "nbformat>=5.9",
    "markdown2>=2.4",
    "html2text>=2020.1.16",
    "Pillow>=9.0",
    "ruff>=0.5.0",
    "jedi>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/atila-gh/Uranus-IDE"
Documentation = "https://github.com/atila-gh/Uranus-IDE/wiki"
Issues = "https://github.com/atila-gh/Uranus-IDE/issues"

[project.scripts]
uranus = "Uranus.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Uranus = [
    "font/*.ttf",
    "font/*.otf",
]